apps/container-registry/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: container-registry
spec:
  selector:
    app.kubernetes.io/name: container-registry
  ports:
    - protocol: TCP
      port: 80
      targetPort: registry
