apps/container-registry/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: "container-registry"
spec:
  podSelector: {}
  policyTypes:
    - "Egress"
    - "Ingress"
  ingress:
    - ports:
        - protocol: "TCP"
          port: "registry"
      from: []
    - ports:
        - protocol: "TCP"
          port: "metrics"
      from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: "monitoring"
          podSelector:
            matchLabels:
              app: "prometheus"
  egress: []
